fixed overflow-x mobile problem

--- a/style.css
+++ b/style.css
@@ -14,9 +14,10 @@ html, body{
     padding: 0;
     height: 100%;
     min-width: 264px;
+    max-width: 100vw;
 }
 
-body{
+.overflow-x-hidden{
     overflow-x: hidden;
 }
 
